@@ -1,3 +1,7 @@
+20060421:
+- set exitcode to failure whenever an error occures
+- fixed a warning
+
 20060324:
 - added option -c to enable synchronous data integrity I/O:
   This was enabled by default until now, but may cause a decrease in
